--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/welcome_page.png
+    - assets/sign_in_page.png
+    - assets/sign_up_page.png
+    - assets/background.png
+    - assets/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -89,6 +93,19 @@ flutter:
         - asset: fonts/OpenSans-Bold.ttf
           weight: 600
         - asset: fonts/OpenSans-ExtraBold.ttf
+          weight: 700
+
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Light.ttf
+          weight: 300
+        - asset: fonts/Montserrat-Regular.ttf
+          weight: 400
+        - asset: fonts/Montserrat-SemiBold.ttf
+          weight: 500
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 600
+        - asset: fonts/Montserrat-ExtraBold.ttf
           weight: 700
   # fonts:
   #   - family: Schyler
