--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,18 @@ flutter:
           weight: 600
         - asset: fonts/OpenSans-ExtraBold.ttf
           weight: 700
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Light.ttf
+          weight: 300
+        - asset: fonts/Montserrat-Regular.ttf
+          weight: 400
+        - asset: fonts/Montserrat-SemiBold.ttf
+          weight: 500
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 600
+        - asset: fonts/Montserrat-ExtraBold.ttf
+          weight: 700
   # fonts:
   #   - family: Schyler
   #     fonts:
