--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/welcome_page.png
     - assets/theme1.png
     - assets/theme2.png
+    - assets/instantLoan.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
