BG_Image_added_20211008

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/sign_up_page.png
     - assets/background.png
     - assets/logo.png
+    - assets/bg_common.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
